--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <div id="app"></div>
     <script src="../dist/vue.js"></script>
     <script>
-        // console.log(Vue)
+     
+        // vue2中 模版编译 
+        //  可以选择性的添加 runtimeOnly 只在运行时使用（无法解析用户传递template属性）
+        //    runtime with compiler (可以【-【实现模版编译)
         const vm = new Vue({
             el:'#app',
             //数据会被进行检测，相应数据变化，我们对数据操作可以更新视图
@@ -28,16 +31,40 @@
                         {a:1}
                     ]
                 }
-            }
+            },
+            //js语法也可以使用ast语法树来描述
+            // 1、实现一个解析器，可以解析html模版 => ast(抽象语法树)，可以用一个树结构来描述当前标签的内容
+            //2、虚拟节点是描述dom的,使用对象来描述html的 ast语法树描述语法的
+            //将html变成js语法（render函数）
+
+
+            // {
+            //     tag:'div',
+            //     attrs:[{
+            //         name:'class',
+            //         value:'a'
+            //     }],
+            //     children:[
+            //         tag:'div',
+            //         attrs:[],
+            //         children:[]
+            //     ]
+            // }
+
+            //如何将模版变成 render函数 =》返回的是虚拟节点
+            // template:`<div class="a"><span>12</span> hello {{age}} {{msg}}</div>`,
+            template:`<div id='app' style="color:red"><span>helloword {{msg}}</span></div>`,
+            // render(){  //vue 虚拟dom（垮平台）
+            //     with(vm._data){
+            //         return _c('div',{class:'a'},_c('span',null,12,_v('hello')+_v(age)+_v(msg)))
+            //     }
+            // }
         })
-        console.log(vm)
-        vm._data.arr.push({b:2})
-        console.log(vm)
-        // function Person(){
-        //     this.name = '11'
-        // }
-        // let father = new Person();
-        // console.log(father.name);
+        // console.log(vm)
+        // vm._data.arr.push({b:2})  测试数组添加属性的时候会不会被监听
+        // with(vm._data){  
+        //            console.log(msg)
+        //   }
     </script>
 </body>
 </html>
