模版的编译

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
             //如何将模版变成 render函数 =》返回的是虚拟节点
             // template:`<div class="a"><span>12</span> hello {{age}} {{msg}}</div>`,
-            template:`<div id='app' style="color:red"><span>helloword {{msg}}</span><b>加租</b></div>`,
+            template:`<div id='app' style="color:red;background:green"><span>helloword {{msg}} {{mag}}aa</span><b>加租</b></div>`,
             // render(){  //vue 虚拟dom（垮平台）
             //     with(vm._data){
             //         return _c('div',{class:'a'},_c('span',null,12,_v('hello')+_v(age)+_v(msg)))
